--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -120,6 +120,9 @@ to 1 to run each sample in one job, thus reducing the job managment overhead.
 ** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
 ** a file name: the regions in the file will be used for distribution
 
+; -maxfastqdistr maxfastqdistr: if there are more than **maxfastqdistr** separate input fastqs, they will be merged 
+into **maxfastqdistr** fastqs for analysis: If there are many (small) fastqs, the overhead to 
+processes (alignment etc.) them separately (default, to distribute the load) can become too large.
 ; -keepfields fieldlist: Besides the obligatory fields, include only the
 fields in fieldlist (space separated) in the multicompar file. Default is
 to use all fields present in the file (*). All fields will still be used
@@ -128,6 +131,8 @@ in the per sample output.
 of data (genome, exome or amplicons) for analysis. You can specify it
 using this option. If not given, it is deduced from acompanying region
 files (reg_*_amplicons.tsv for ampicons or reg_*_amplicons.tsv for exome)
+; -hap_bam 0/1: if 1 produce a bam file with haplotype indictions (longshot only) (default 0)
+; -depth_histo_max number: in reports, count positions with up to **number** depth (default 1000). Larger dfepths will be counted under **number**
 
 This command can be distributed on a cluster or using multiple cores with
 [[joboptions|job options]] (more info with cg help joboptions)
