--- a/lib/cg_regextract.wiki
+++ b/lib/cg_regextract.wiki
@@ -26,7 +26,7 @@ taken from the filename by splitting on "-", and taking the second
 element.
 
 == Arguments ==
-; **file1**: file containing (chromosome,) position and value columns, or bcol file.
+; **file1**: sam/bam/cram file or file containing (chromosome,) position and value columns, or bcol file.
 ; **...**: other files
  
 == Options ==
