--- a/lib/cg_var.wiki
+++ b/lib/cg_var.wiki
@@ -32,9 +32,9 @@ This command can be distributed on a cluster or using multiple cores with
 
 == Options ==
 ; -method varcaller: use the given method (**varcaller**) to call
-variants. Default varcaller is gatk for the GATK unified genotype caller.
-Other possible values are: gatkh (Haplotype caller), strelka, sam,
-freebayes
+variants. Default varcaller is gatkh for the GATK haplotyped genotype caller.
+Other possible values are: gatk (GATK unified genoptype caller), strelka, sam, bcf, 
+freebayes, longshot, medaka
 ; -regionfile regionfile: only call variants in the region(s) given in regionfile
 ; -regmincoverage mincoverage: If no regionfile is given, variants will be called only in regions with
 a coverage of at least **mincoverage** (default 3)
@@ -52,6 +52,7 @@ of data (genome, exome or amplicons) for analysis. You can specify it
 using this option. If not given, it is deduced from acompanying region
 files (reg_*_amplicons.tsv for ampicons or reg_*_amplicons.tsv for exome)
 ; -split 1/0: indicate if in the datafiles, multiple alternative genotypes are split over different lines (default 1)
+; -hap_bam 0/1: if the methods supports it (currently only longshot), also create a haplotyped bam
 ; -t number (-threads): number of threads used by each job (if the method supports threads)
 ; -cleanup 0/1: Use 0 to no cleanup some of the temporary files (vcf, delvar, ...)
 ; -opt options: These options are passed through to the underlying variant caller (default is empty)
