--- a/lib/cg_annotate.wiki
+++ b/lib/cg_annotate.wiki
@@ -51,6 +51,8 @@ a - allways replace them with new information
 ; -lmargin number: (SV only) Allow begin and end to deviate the number of bases given for deletions, inversions (default 300)
 ; -tmargin number: (SV only) Allow begin and end to deviate the number of bases given for translocations (trans) and breakends (bnd) (default 300)
 ; -overlap number: (SV only) minimum percent overlap needed to identify deletions, inversions or insertions (size) as the same (default 75)
+; -type sv/var: type determines which databases of a given annotation dir will be used for annotation (default var). 
+Type var will not use sv_* annotations and type sv will not use the var_* annotations
 
 == database types ==
 ; **reg**: regions file that must at least contain the columns chromosome,start,end. 
