cg cat: added -c m option to merge comments, added write_deindent for tests, used in tests/tsv.tcl

--- a/lib/cg_cat.wiki
+++ b/lib/cg_cat.wiki
@@ -22,8 +22,9 @@ it will be empty for each line coming from this file.
 ; **-f 0/1** (--force): if the force option is given, tab files with different fields will still be concatenated without error.
 ; **-s 0/1** (--sort): if the sort option is given, the files will be sorted (natural sort order) before being concatenated.
 This is usefull for e.g. concatenating files split over chromosomes in the correct order.
-; **-c 0/1/f/n** (--comments): Determines what will be in the comments of the result file.
-if -c is 1 (default), the names of the files that are concatenated are added in the comment 
+; **-c m/0/1/f/n** (--comments): Determines what will be in the comments of the result file.
+if -c is m (default), the comments are merged (supposing they are using the genomecomb metadata in comments format as described in [[format_tsv]])
+if -c is 1, the names of the files that are concatenated are added in the comment 
 in addition to the comments of all source files.
 if 0 the comments of all source files are there, but no extra comments (file names) are added. 
 You can use the value f to only display the comment of the first file, 
