cg cat: added -catfiles option

--- a/lib/cg_cat.wiki
+++ b/lib/cg_cat.wiki
@@ -31,7 +31,7 @@ You can use the value f to only display the comment of the first file,
 or n to leave out comments completely.
 ; **-n fieldname** (--fieldname): if -n is not empty, a column with the name fieldname will be added, that contains the filename where the line came from
 ; **-fields fields** (--fields): only return the given **fields** in the concatenated output
-
+; -catfiles 0/1: show concatenated files in merged header (only for -c m) under key catfiles (default 0)
 
 == Category ==
 tsv
