--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -76,7 +76,9 @@ fastqstats fastqc flagstat_reads flagstat_alignments samstats alignedsamstats un
 ** schr or schromosome: each chromosome processed separately
 ** chr or chromosome: each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
 ** a number: distribution into regions of this size
-** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
+** a number preceded by an s: distribution into regions targeting the given size, but breaks can only occur in unsequenced regions of the genome (N stretches)
+** a number preceded by an r: distribution into regions targeting the given size, but breaks can only occur in large (>=100000 bases) repeat regions
+** a number preceded by an g: distribution into regions targeting the given size, but breaks can only occur in large (>=200000 bases) regions without known genes
 ** a file name: the regions in the file will be used for distribution
 ; -maxfastqdistr maxfastqdistr: if there are more than **maxfastqdistr** separate input fastqs, they will be merged 
 into **maxfastqdistr** fastqs for analysis: If there are many (small) fastqs, the overhead to 
