--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -118,7 +118,9 @@ to 1 to run each sample in one job, thus reducing the job managment overhead.
 ** schr or schromosome: each chromosome processed separately
 ** chr or chromosome: each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
 ** a number: distribution into regions of this size
-** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
+** a number preceded by an s: distribution into regions targeting the given size, but breaks can only occur in unsequenced regions of the genome (N stretches)
+** a number preceded by an r: distribution into regions targeting the given size, but breaks can only occur in large (>=100000 bases) repeat regions
+** a number preceded by an g: distribution into regions targeting the given size, but breaks can only occur in large (>=200000 bases) regions without known genes
 ** a file name: the regions in the file will be used for distribution
 
 ; -maxfastqdistr maxfastqdistr: if there are more than **maxfastqdistr** separate input fastqs, they will be merged 
