--- a/lib/cg_sv.wiki
+++ b/lib/cg_sv.wiki
@@ -40,7 +40,9 @@ Possible options are
 ** schr or schromosome: each chromosome processed separately
 ** chr or chromosome: each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
 ** a number: distribution into regions of this size
-** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
+** a number preceded by an s: distribution into regions targeting the given size, but breaks can only occur in unsequenced regions of the genome (N stretches)
+** a number preceded by an r: distribution into regions targeting the given size, but breaks can only occur in large (>=100000 bases) repeat regions
+** a number preceded by an g: distribution into regions targeting the given size, but breaks can only occur in large (>=200000 bases) regions without known genes
 ** a filename: the regions in the file will be used for distribution
 ; -split 1/0: indicate if in the datafiles, multiple alternative genotypes are split over different lines (default 1)
 ; -t number (-threads): number of threads used by each job (if the method supports threads)
